fix transaction response, fix docs, ignore makefile
